--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "codacy-coverage": "^3.4.0",
+    "debounce": "^1.2.0",
     "nuxt": "^2.0.0",
     "vue-jsonp": "^0.1.8"
   },
