--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "codacy-coverage": "^3.4.0",
     "debounce": "^1.2.0",
     "nuxt": "^2.0.0",
-    "vue-jsonp": "^0.1.8"
+    "vue-jsonp": "^0.1.8",
+    "vue-lottie": "^0.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
